--- a/dokumentation/src/ProjektDoku_Winter2017.tex
+++ b/dokumentation/src/ProjektDoku_Winter2017.tex
@@ -23,8 +23,7 @@
 \usepackage{array}
 \usepackage{listings}
 \usepackage{url}
-\usepackage{packages/dirtytalk}
-\usepackage{packages/pgf-pie} % /home/nils/git/abschlussprojekt/documentation/pgf-pie
+\usepackage{packages/pgf-pie}
 \usepackage{enumitem}
 \usepackage{rotating}
 \setlist[enumerate]{label*=\arabic*.}
