added reference to lastenheft

--- a/dokumentation/src/analysephase.tex
+++ b/dokumentation/src/analysephase.tex
@@ -85,7 +85,7 @@ im Anhang\ref{fig:qgjoinUseCase} beigefügt.
 
 \subsection{Lastenheft / Fachkonzept}
 Ein Lastenheft wurde von der Abteilung Datenverarbeitung, vertreten durch Sebastian Freundt,
-erstellt und dem Autor vorgelegt. Ein Auszug dieses Dokumentes befindet sich im Anhang auf Seite X.\par
+erstellt und dem Autor vorgelegt. Ein Auszug dieses Dokumentes befindet sich im Anhang in Abschnitt \ref{auszug:lastenheft}.\par
 
 
 
