fix captions of code listings

--- a/dokumentation/src/anhang.tex
+++ b/dokumentation/src/anhang.tex
@@ -223,10 +223,10 @@
 \end{figure}
 
 \subsubsection{Quellcodeauszug: Dynamische Array}
-\lstinputlisting[language=C, label=lising:arrayImplementation, caption=Auszug aus dem C Quellcode der dynamischen Array]{anhang/array.c}
+\lstinputlisting[language=C, label=lising:arrayImplementation, caption=Auszug aus dem C Quellcode des dynamischen Array]{anhang/array.c}
 
 \subsubsection{Quellcodeauszug: Hashtable Implementation}
-\lstinputlisting[language=C, label=listing:hashtableImplmentation, caption=Auszug aus dem C Quellcode der dynamischen Array]{anhang/hashmap.c}
+\lstinputlisting[language=C, label=listing:hashtableImplmentation, caption=Auszug aus dem C Quellcode der Hashmap]{anhang/hashmap.c}
 
 \subsubsection{Auszug: Entwicklerdokumentation}
 \lstinputlisting[language=C, label=listing:entwicklerDoku, caption=Beispiel eines Docstrings für Entwickler]{anhang/docstring.c}
