--- a/dokumentation/src/postmortem.tex
+++ b/dokumentation/src/postmortem.tex
@@ -1,16 +1,49 @@
 \section{Fazit}
- Kommt noch
 
 \subsection{Soll- /Ist-Vergleich}
-Kommt noch
+Rückblickend kann festgehalten werden, dass alle, im Pflichtenheft
+abgesprochenen Funktionen und Anforderungen eingehalten worden sind,
+und zur vollsten Zufriedenheit des Auftraggebers erstellt wurden. Hierbei
+spielt die Entscheidung, die Einbindung des C Codes in PYthon zu streichen, sicherlich
+eine elementare Rolle. Wie man erkennen kann, wurden die Stunden, welche durch
+die Streichung frei wurden, effektive und vollsten ausgenutzt um den Anforderungen
+des Projekts gerecht zu werden. Dabei wurden die von der IHK vorgegebenen 70 Stunden
+konsequent eingehalten.
 
 \subsection{Post Mortem}
-Kommt noch
+
+Vor Allem die Entwurfsphase half dem Autor seine Kenntnisse aus dem Projektmanagement anzuwenden,
+und waren bei den Nutzwertanalysen besonders hilfreich. Auch stellte sich die Anwendung des
+testgetriebenen Entwicklungskreislaufs als große Unterstützung dar - so wurden lästige Segmentation Faults frühzeitig
+erkannt, und die Funktionen (und somit das gesamt Programm) konnten schneller zu Produktionsreife heranwachsen.
+Auch das genutzte Kanban-Board erwies sich als großartiges Werkzeug, um Prozesse und deren Fortschritt zu dokumentieren.
+Kurze Kommunikations- und Entshceidungswege ermöglichten eine agile Entwicklung der Projekts und werden
+dem Autor auch weiterhin als ein wichtiger Baustein produktiver Arbeitsumgebungen in Erinnerung bleiben.
 
 \subsection{Ausblick}
-Kommt noch
+Punkte, welche im Lastenheft genannt, aber nicht mit in das Pflichtenheft genommen worden,
+stehen nun natürlich auf der Liste der weiteren Schritte. Da der Code gut dokumentiert
+und mit viel Auge für Lesbarkeit geschrieben worden ist, ist eine Cythoneinbindung nun trivial.
+Durch die bereitgestellten Tests können ebenfalls schnell Python Unittests erstellt, und somit
+die Einbindung des C Codes effektiv und verlässlich auch in Python überprüft werden.
 
-Weitere Schritte:\\
-Python einbindung\\
-Optimierung des Algorithmusfilters\\
-Optimierung des Rechenaufwands des Algorithmus\\
+Schlussendlich bleiben noch zwei Punkte, welche in Zukunft angegangen werden könnten, um das Programm weiter zu verfeinern:
+\begin{enumerate}
+
+\item Die Optimierung der Programmlogik \\
+    \begin{itemize}
+        \item Verfeinerung der Hashfunktion -
+        \item
+    \end{itemize}
+
+
+\item Die Anpassung des Q-Gramm Filters
+    \begin{itemize}
+        \item
+        \item
+    \end{itemize}
+
+\end{enumerate}
+
+
+
