added ressources list

--- a/dokumentation/src/anhang.tex
+++ b/dokumentation/src/anhang.tex
@@ -132,6 +132,33 @@
 \end{sidewaystable}
 
 \subsection{Auszüge}
+\subsection{Ressourcen}
+\textbf{Hardware}
+\begin{itemize}
+    \item Büroarbeitsplatz mit vernetztem Rechner
+    \item Laptop
+\end{itemize}
+
+\textbf{Software}
+\begin{itemize}
+    \item openSuSE 13.1 - Linux Distribution
+    \item Atom IDE - Modulare, Open-Source Entwicklungsumgebung für eine Vielfalt an Sprachen
+    \item PyCharm Community Edition - Python Entwicklungsumgebung
+    \item LaTeX - Textsatzsystem zur Erstellung von Dokumenten
+    \item Python 3.5 - Interpretierte Programmiersprache
+    \item Cython - Superset der Python Sprache zur Einbindung von C Code.
+    \item GNU Compiler Collection (GCC) - Compilersammlung des GNU Projekts
+    \item Git - Dezentralisierte Versionsverwaltung
+\end{itemize}
+
+\textbf{Personal}
+\begin{itemize}
+    \item Mitarbeiter der Abteilung Datenverarbeitung - Festlegung der Anforderungen sowie Abnahme des Projektes
+    \item Entwickler - Umsetzung des Projekts
+    \item Anwendungsentwickler - Code Review
+\end{itemize}
+
+
 \subsubsection{Lastenheft}
 \renewcommand{\labelenumii}{\theenumii}
 \renewcommand{\theenumii}{\theenumi.\arabic{enumii}.}
