--- a/dokumentation/src/analysephase.tex
+++ b/dokumentation/src/analysephase.tex
@@ -65,7 +65,7 @@ Diese wurden anhand der folgenden Kriterien bewertet:
 Als nächstes wurden die Projektkosten berechnet. Hierfür wurden pauschale Beträge 
 für Mitarbeiterstundenlöhne, sowie Kosten für Räumlichkeiten, Strom und sonstige Utensilien 
 (Papier, Drucker, Programme, Rechner etc) veranschlagt. Diese können in der Tabelle 
-\ref{projektkosten} eingesehen werden. Es wurden hierfür ein Stundenlohn von 5,50€ für den 
+\ref{tabelle:projektkostenp} eingesehen werden. Es wurden hierfür ein Stundenlohn von 5,50€ für den
 Autoren, sowie ein Stundenlohn von 35€ für jeden weiteren Mitarbeiter angesetzt. Nutzungskosten 
 der Räumlichkeiten, Rechner, Software und weiterer Utensilien wurden mit 20€ pro Stunde kalkuliert. \par
 
