--- a/dokumentation/src/anhang.tex
+++ b/dokumentation/src/anhang.tex
@@ -244,20 +244,18 @@
 
 \subsubsection{Pseudocode: Algorithmus}
 \begin{figure}[!htp]
-	\caption{Aktivitätsdiagramm der Programmlogik}
-	\label{listing:pseudocode}
-	\lstinputlisting[language=C, caption=Pseudocode des zu implementierenden Algorithmus]{anhang/pseudo.code}
+	\lstinputlisting[language=C, caption=Pseudocode des zu implementierenden Algorithmus, label=listing:pseudocode]{anhang/pseudo.code}
 	\centering
 \end{figure}
 
 \subsubsection{Quellcodeauszug: Dynamische Array}
-\lstinputlisting[language=C, label=lising:arrayImplementation, caption=Auszug aus dem C Quellcode des dynamischen Array]{anhang/array.c}
+\lstinputlisting[language=C, caption=Auszug aus dem C Quellcode des dynamischen Array, label=lising:arrayImplementation,]{anhang/array.c}
 
 \subsubsection{Quellcodeauszug: Hashtable Implementation}
-\lstinputlisting[language=C, label=listing:hashtableImplmentation, caption=Auszug aus dem C Quellcode der Hashmap]{anhang/hashmap.c}
+\lstinputlisting[language=C, caption=Auszug aus dem C Quellcode der Hashmap, label=listing:hashtableImplmentation,]{anhang/hashmap.c}
 
 \subsubsection{Auszug: Entwicklerdokumentation}
-\lstinputlisting[language=C, label=listing:entwicklerDoku, caption=Beispiel eines Docstrings für Entwickler]{anhang/docstring.c}
+\lstinputlisting[language=C, caption=Beispiel eines Docstrings für Entwickler, label=listing:entwicklerDoku]{anhang/docstring.c}
 
 \subsubsection{Auszug: Endnutzerdokumentation}
 \begin{lstlisting}[style=xterm, caption=Ausgabe der Endnutzerdokumentation über den --help parameter, label=fig:cliHelp,]
