fixed some more refs

--- a/dokumentation/src/anhang.tex
+++ b/dokumentation/src/anhang.tex
@@ -12,7 +12,7 @@
 \subsubsection{Geschäftslogik Alt}
 \begin{figure}
 	\caption{UML Diagramm der bisherigen Geschäftslogik}
-	\label{fig:geschäftslogikAlt}
+	\label{fig:businessLogicAlt}
 \end{figure}
 
 
