added hannas correction

--- a/dokumentation/src/analysephase.tex
+++ b/dokumentation/src/analysephase.tex
@@ -71,11 +71,9 @@ der Räumlichkeiten, Rechner, Software und weiterer Utensilien wurden mit 20€ 
 
 
 \subsubsection{Amortisationsdauer}
-Nach einer Einschätzung von der Abteilung für Datenverarbeitung wird zur Zeit in der Abteilung ein Mitarbeiter etwa 10 Stunden in der Woche
-darauf verwendet, Symboliken miteinander zu vergleichen. Dies ergibt, mit dem in der Projektkostenkalkulation verwendeten
-Stundenlöhnen und Kosten für Räumlichkeiten, Hard- und Software also 10*55€ = 550€ Pro Woche.
-Der Autor verspricht sich im schlechtesten Fall durch das Programm eine Beschleunigung des Vergleichsprozesses von etwa 30\%. Im optimal Fall würde der Prozess nur noch etwa 2 Stunden (80\% Verbesserung) dauern. Als realistisch schätzt der
-Autor eine Optimierung des Vorgangs um etwa 55\%\footnote{Die Zeiten wurden anhand von Kalkulationen der theorethischen Rechenvorgänge unter Einbezug von Schreib-, und Lesegeschwindigkeiten des Speichers, sowie Geschwindigkeit der CPU geschätzt.}.
+Nach einer Einschätzung der Abteilung für Datenverarbeitung wird zur Zeit jede Woche ein Mitarbeiter etwa 10 Stunden pro Woche benötigt, Symboliken miteinander zu vergleichen. Dies ergibt, mit dem in der Projektkostenkalkulation verwendeten
+Stundenlöhnen und Kosten für Räumlichkeiten, Hard- und Software also \[10 Stunden*55€ = 550€\] pro Woche.
+Der Autor verspricht sich durch das Programm eine Beschleunigung des Vergleichsprozesses um etwa 30\%. Im Optimalfall würde der Prozess nur noch etwa zwei Stunden (80\% Verbesserung) dauern und eine Verbesserung von 55\% wird vom Autor als realistisch eingeschätzt\footnote{Die Zeiten wurden anhand von Kalkulationen der theorethischen Rechenvorgänge unter Einbezug von Schreib-, und Lesegeschwindigkeiten des Speichers, sowie Geschwindigkeit der CPU geschätzt.}.
 
 Anhand dieser Prozente lassen sich folgende Amortisationsdauern errechnen:\\
 \\
