added Projektplanungsabschnitt, added referenced tables to anhang

--- a/dokumentation/src/ProjektDoku_Winter2017.tex
+++ b/dokumentation/src/ProjektDoku_Winter2017.tex
@@ -87,6 +87,10 @@
 \include{intro}
 \clearpage
 
+\label{section:projektplanung}
+\include{projektplanung}
+\clearpage
+
 \label{section:analysephase}
 \include{analysephase}
 \clearpage
