--- a/dokumentation/src/projektplanung.tex
+++ b/dokumentation/src/projektplanung.tex
@@ -3,10 +3,9 @@
 Dem Autor standen 70 Arbeitsstunden zur Umsetzung des Projektes zur Verfügung.
 Vor Beginn des Projekts wurden diese auf die, für die Softwareentwicklung
 typischen, Phasen verteilt. Eine grobe Übersicht ist in der unteren Tabelle zu
-entnehmen. Eine ausführlichere Aufteilung der Stunden kann dem Anhang
-detaillierte Zeitplanung entnommen werden.
+entnehmen. Eine ausführlichere Aufteilung der Stunden kann der Tabelle
+detaillierte Zeitplanung (\ref{tabelle:zeitplanung}) entnommen werden.
 
-\include{zeitplanung}
 
 
 \subsection{Abweichungen vom Projektantrag}
@@ -21,9 +20,7 @@ zugewiesen worden waren, stattdessen der Optimierung des C Programms zugeschrieb
 In der Ressourcenplanung finden sich sämtliche Einheiten aufgelistet, welche für
  die Realisierung des Projektes benötigt wurden. Hierbei ist zu erwähnen dass
  hiermit Hard- und Softwareressourcen, sowie personelle Ressourcen gemeint sind.
- Die Auflistung der Ressourcen kann im Anhang eingesehen werden.
-
-\include{ressourcen}
+ Die Auflistung der Ressourcen kann im Abschnitt \ref{auszug:ressourcen} des Anhangs eingesehen werden.
 
 \subsection{Entwicklungsprozess}
 Für die Umsetzung des Projekts wurde vom Autor ein agiler Entwicklungsprozess in
