added business logic diagrams

--- a/dokumentation/src/anhang.tex
+++ b/dokumentation/src/anhang.tex
@@ -1,12 +1,19 @@
 \section{Anhang}
 \subsection{Diagramme und Grafiken}
 
-\subsubsection{Geschäftslogik Alt}
+\subsubsection{Geschäftslogik (Alt)}
 \begin{figure}
 	\caption{UML Diagramm der bisherigen Geschäftslogik}
 	\label{fig:businessLogicAlt}
+    \includegraphics{businessLogicOld}
 \end{figure}
 
+\subsubsection{Geschäftslogik (Neu)}
+\begin{figure}
+	\caption{UML Diagramm der bisherigen Geschäftslogik}
+	\label{fig:businessLogicAlt}
+    \includegraphics{businessLogicNew}
+\end{figure}
 
 
 \subsubsection{Aktivitätsdiagramm: Programmlogik}
