updated captionfor new bis logic diagram, added position fix

--- a/dokumentation/src/anhang.tex
+++ b/dokumentation/src/anhang.tex
@@ -2,15 +2,15 @@
 \subsection{Diagramme und Grafiken}
 
 \subsubsection{Geschäftslogik (Alt)}
-\begin{figure}
+\begin{figure}[!htp]
 	\caption{UML Diagramm der bisherigen Geschäftslogik}
 	\label{fig:businessLogicAlt}
     \includegraphics{businessLogicOld}
 \end{figure}
 
 \subsubsection{Geschäftslogik (Neu)}
-\begin{figure}
-	\caption{UML Diagramm der bisherigen Geschäftslogik}
+\begin{figure}[!htp]
+	\caption{UML Diagramm der Geschäftslogik nach Fertigstellung des Projekts}
 	\label{fig:businessLogicAlt}
     \includegraphics{businessLogicNew}
 \end{figure}
