formatted equations for amortistationsdauer

--- a/dokumentation/src/analysephase.tex
+++ b/dokumentation/src/analysephase.tex
@@ -78,15 +78,20 @@ Der Autor verspricht sich durch das Programm eine Beschleunigung des Vergleichsp
 Anhand dieser Prozente lassen sich folgende Amortisationsdauern errechnen:\\
 \\
 
-    \textbf{Bester Fall}:
-    \[\frac{3,883.75\text{Euro}}{550\text{Euro} \times 80\text{\%}} \approx 9 Wochen\]
+\textbf{Bester Fall}: \\
+\\
+$\[\frac{3,883.75\text{€}}{550\text{€} \times 80\text{\%}} \approx 9 Wochen \]$
+\\
 
-    \textbf{Wahrscheinlichster Fall}:
-    \[\frac{3,883.75\text{Euro}}{550\text{Euro} \times 55\text{\%}} \approx 13 Wochen\]
+\textbf{Wahrscheinlichster Fall}:\\
+\\
+$\[\frac{3,883.75\text{€}}{550\text{€} \times 55\text{\%}} \approx 13 Wochen \]$
+\\
 
-    \textbf{Schlechtester Fall}:
-    \[\frac{3,883.75\text{Euro}}{550\text{Euro} \times 30\text{\%}} \approx 24 Wochen\]
-
+\textbf{Schlechtester Fall}:\\
+\\
+$\[\frac{3,883.75\text{€}}{550\text{€} \times 30\text{\%}} \approx 24 Wochen \]$
+\\
 
 \subsection{Lastenheft / Fachkonzept}
 Ein Lastenheft wurde von der Abteilung Datenverarbeitung, vertreten durch Sebastian Freundt,
