moved labels to tex files for each section

--- a/dokumentation/src/ProjektDoku_Winter2017.tex
+++ b/dokumentation/src/ProjektDoku_Winter2017.tex
@@ -9,8 +9,7 @@
 \usepackage[german]{babel}
 \usepackage{graphicx}
 \graphicspath{ {./images/} }
-\usepackage{amsmath}
-\DeclareGraphicsExtensions{.png, .eps, .pdf}
+\DeclareGraphicsExtensions{.png, .PNG, .eps, .pdf}
 \usepackage{palatino}
 \usepackage{hyperref}
 \usepackage{inputenc}
@@ -99,23 +98,23 @@
 \include{projektplanung}
 \clearpage
 
-\label{section:analysephase}
+
 \include{analysephase}
 \clearpage
 
-\label{section:entwurfsphase}
+
 \include{entwurfsphase}
 \clearpage
 
-\label{section:implementierungsphase}
+
 \include{implementierung}
 \clearpage
 
-\label{section:abnahmephase}
+
 \include{abnahme}
 \clearpage
 
-\label{section:dokumentationsphase}
+
 \include{dokumentationsphase}
 \clearpage
 
