--- a/dokumentation/src/abnahme.tex
+++ b/dokumentation/src/abnahme.tex
@@ -1,4 +1,5 @@
 \section{Abnahmephase}
+\label{section:abnahmephase}
 Nach Abschluss der Implementierungsphase wurde das Projekt, wie zuvor mit der
 Abteilung für Datenverarbeitung abgesprochen, sowohl dem Abteilungsleiter im Einzelgespräch,
 als auch der gesamten Abteilung in Form einer Präsentation, präsentiert.
