--- a/dokumentation/src/analysephase.tex
+++ b/dokumentation/src/analysephase.tex
@@ -1,4 +1,5 @@
 \section{Analysephase}
+\label{section:analysephase}
 \subsection{Ist-Analyse}
 Die GA Financial Solutions GmbH holt sich täglich aktuelle Symbole von sechs verschiedenen
 Anbietern ab: Interactive Brokers, Google, Yahoo, Morningstar, Bloomberg und GLEIS.
