--- a/dokumentation/src/dokumentationsphase.tex
+++ b/dokumentation/src/dokumentationsphase.tex
@@ -1,4 +1,5 @@
 \section{Dokumentation}
+\label{section:dokumentationsphase}
 Die Dokumentation ist aufgeteilt in zwei Bestandteile: Die Nutzerdokumentation
 in Form einer CLI-Dokumentation, sowie die Entwicklerdokumentation in Form von
 Dokumentationsblöcken im Quellcode. Die gesamte Dokumentation wurde auf Englisch,
