--- a/dokumentation/src/entwurfsphase.tex
+++ b/dokumentation/src/entwurfsphase.tex
@@ -1,6 +1,5 @@
 \section{Entwurfsphase}
-
-
+\label{section:entwurfsphase}
 \subsection{Zielplattform}
 Wie aus dem vorherigen Abschnitt\ref{section:einleitung} entnommen werden kann, soll das Projekt als Kommandozeilenprogramm
 implementiert werden. Anhand der Anforderungen des Lastenhefts, welches Speicherperformanz sowie Geschwindigkeit fordert,
