--- a/dokumentation/src/postmortem.tex
+++ b/dokumentation/src/postmortem.tex
@@ -1,5 +1,5 @@
 \section{Fazit}
-
+\label{section:postmortem}
 \subsection{Soll- /Ist-Vergleich}
 Rückblickend kann festgehalten werden, dass alle, im Pflichtenheft
 abgesprochenen Funktionen und Anforderungen eingehalten worden sind,
