renamed acronyms and updated reference

--- a/dokumentation/src/ProjektDoku_Winter2017.tex
+++ b/dokumentation/src/ProjektDoku_Winter2017.tex
@@ -86,8 +86,8 @@
 \newpage
 \pagenumbering{arabic}
 
-\label{section:acronyms}
-\input{acronyms}
+\label{section:abbreviations}
+\include{abbreviations}
 \clearpage
 
 \label{section:einleitung}
@@ -122,6 +122,7 @@
 \clearpage
 
 \include{anhang}
+\clearpage
 
 \bibliography{bibliography}
 %---------------------------------------------------------------------------
