minor style fix of sentence

--- a/dokumentation/src/projektplanung.tex
+++ b/dokumentation/src/projektplanung.tex
@@ -48,7 +48,7 @@ die 5 Stufen, in welche der Autor die Entwicklungsphase unterteilt hat, stehen:
     und vom Auftraggeber überprüft und unterschrieben worden.
 \end{itemize}
 
-Ein Augenmerk ist hierbei vor Allem auf die Spalte "Verifizierung" zu legen.
+Das Augenmerk ist hierbei vor Allem auf die Spalte "Verifizierung" zu legen.
 Diese bereichert den Entwicklungsprozess um einen formellen, fest vorgesehenen
 Zeitpunkt im Entwicklungsprozess, die dem Kunden ermöglicht, direktes Feedback
 zur Lösung des Arbeitpakets zu geben, und frühzeitig möglicherweise notwendige
