fixed equation for amortisation

--- a/dokumentation/src/ProjektDoku_Winter2017.tex
+++ b/dokumentation/src/ProjektDoku_Winter2017.tex
@@ -8,6 +8,7 @@
 \usepackage{url}
 \usepackage[german]{babel}
 \usepackage{graphicx}
+\usepackage{eurosym}
 \graphicspath{ {./images/} }
 \DeclareGraphicsExtensions{.png, .PNG, .eps, .pdf}
 \usepackage{palatino}
@@ -21,6 +22,7 @@
 \usepackage{multirow}
 \usepackage{epstopdf}
 \usepackage{array}
+\usepackage{amsmath}
 \usepackage{listings}
 \usepackage{url}
 \usepackage{packages/pgf-pie}
