--- a/dokumentation/src/analysephase.tex
+++ b/dokumentation/src/analysephase.tex
@@ -81,17 +81,17 @@ Anhand dieser Prozente lassen sich folgende Amortisationsdauern errechnen:\\
 
 \textbf{Bester Fall}: \\
 \\
-$\[\frac{3,883.75\text{€}}{550\text{€} \times 80\text{\%}} \approx 9 Wochen \]$
+$\frac{3,883.75\text{\euro}}{550\text{\euro} \times 80\text{\%}} \approx 9 Wochen$
 \\
 
 \textbf{Wahrscheinlichster Fall}:\\
 \\
-$\[\frac{3,883.75\text{€}}{550\text{€} \times 55\text{\%}} \approx 13 Wochen \]$
+$\frac{3,883.75\text{\euro}}{550\text{\euro} \times 55\text{\%}} \approx 13 Wochen$
 \\
 
 \textbf{Schlechtester Fall}:\\
 \\
-$\[\frac{3,883.75\text{€}}{550\text{€} \times 30\text{\%}} \approx 24 Wochen \]$
+$\frac{3,883.75\text{\euro}}{550\text{\euro} \times 30\text{\%}} \approx 24 Wochen$
 \\
 
 \subsection{Lastenheft / Fachkonzept}
