added positioning to tables

--- a/dokumentation/src/anhang.tex
+++ b/dokumentation/src/anhang.tex
@@ -52,7 +52,7 @@
 
 \subsection{Tabellen}
 \subsubsection{Projektkosten}
-\begin{sidewaystable}
+\begin{sidewaystable}[!htp]
 	\centering
 	\caption{Projektkosten}
 	\label{tabelle:projektkosten}
@@ -70,7 +70,7 @@
 \end{sidewaystable}
 
 \subsubsection{Nutzwertanalyse: Projektentwicklung}
-\begin{sidewaystable}
+\begin{sidewaystable}[!htp]
 	\centering
 	\caption{Nutzwertanalyse Projektentwicklung}
 	\label{nwa:projektentwicklung}
@@ -91,7 +91,7 @@
 
 \subsubsection{Nutzwertanalyse: Programmiersprachen}
 
-\begin{sidewaystable}
+\begin{sidewaystable}[!htp]
 	\centering
 	\caption{Nutzwertanalyse der Programmiersprachen}
 	\label{nwa:sprachen}
@@ -113,7 +113,7 @@
 \end{sidewaystable}
 
 \subsubsection{Nutzwertanalyse: Datentyp der Menge Q}
-\begin{sidewaystable}
+\begin{sidewaystable}[!htp]
 	\centering
 	\caption{Nutzwertanalyse der Datentypen für Q}
 	\label{nwa:datentyp}
@@ -131,7 +131,7 @@
 	\end{tabular}
 \end{sidewaystable}
 
-\begin{sidewaystable}
+\begin{sidewaystable}[!htp]
 	\caption{Detaillierte Zeitplanung}
 	\label{tabelle:zeitplanung}
 	\begin{tabular}{ |l r r r|  }
@@ -195,10 +195,7 @@
 \begin{itemize}
     \item openSuSE 13.1 - Linux Distribution
     \item Atom IDE - Modulare, Open-Source Entwicklungsumgebung für eine Vielfalt an Sprachen
-    \item PyCharm Community Edition - Python Entwicklungsumgebung
     \item LaTeX - Textsatzsystem zur Erstellung von Dokumenten
-    \item Python 3.5 - Interpretierte Programmiersprache
-    \item Cython - Superset der Python Sprache zur Einbindung von C Code.
     \item GNU Compiler Collection (GCC) - Compilersammlung des GNU Projekts
     \item Git - Dezentralisierte Versionsverwaltung
 \end{itemize}
