replaced section with appendix

--- a/dokumentation/src/anhang.tex
+++ b/dokumentation/src/anhang.tex
@@ -303,6 +303,8 @@
 \subsection{Quellcodeauszug: Hashtable Implementation}
 \lstinputlisting[language=C, caption=Auszug aus dem C Quellcode der Hashmap, label=listing:hashtableImplmentation,]{anhang/hashmap.c}
 
+\clearpage
+
 \subsection{Auszug: Entwicklerdokumentation}
 \lstinputlisting[language=C, caption=Beispiel eines Docstrings für Entwickler, label=listing:entwicklerDoku]{anhang/docstring.c}
 
